fix css styling review postcard overflow to right side bug

--- a/react-app/src/components/Review/Review.css
+++ b/react-app/src/components/Review/Review.css
@@ -43,6 +43,7 @@
 
 .Review{
     font-size: 20px;
+    word-break: break-all;
 }
 
 .review_by_biz_contanier{
